@@ -1,6 +1,6 @@
 ![Supported JVM Versions](https://img.shields.io/badge/JVM-25+-brightgreen.svg?&logo=openjdk)
 [![Discord](https://img.shields.io/discord/1074074312421683250?color=%237289da&label=discord)](https://discord.gg/Qcqf9R27BR)
-[![Build](https://github.com/avaje/avaje-inject/actions/workflows/build.yml/badge.svg)](https://github.com/avaje/avaje-webview/actions/workflows/build.yml)
+[![Build](https://github.com/avaje/avaje-webview/actions/workflows/build.yml/badge.svg)](https://github.com/avaje/avaje-webview/actions/workflows/build.yml)
 [![License](https://img.shields.io/badge/license-MIT-blue)](https://github.com/avaje/avaje-webview/blob/master/LICENSE)
 [![Maven Central](https://img.shields.io/maven-central/v/io.avaje.webview/avaje-webview.svg?label=Maven%20Central)](https://mvnrepository.com/artifact/io.avaje.webview/avaje-webview)
 [![javadoc](https://javadoc.io/badge2/io.avaje.webview/avaje-webview/javadoc.svg?color=purple)](https://javadoc.io/doc/io.avaje.webview/avaje-webview)
@@ -9,56 +9,46 @@
 
 Avaje Webview wraps native platform webview engines to provide a clean interface for building modern cross-platform GUIs.
 
+Uses **Java 25 FFM** (Foreign Function & Memory) to call native libraries directly.
+
 This is an enhanced fork of https://github.com/webview/webview_java with some [major differences](#notable-changes-from-upstream)
+
+## Platform requirements
+
+| Platform | Engine | Requirement |
+|----------|--------|-------------|
+| **Linux** | WebKitGTK 6.0 | `libgtk-4`, `libwebkitgtk-6.0`, `libjavascriptcoregtk-6.0` must be installed |
+| **macOS** | WKWebView | Built into macOS — no install needed |
+| **Windows** | WebView2 (Edge) | Microsoft Edge must be installed (pre-installed on Windows 10+) |
+
+Linux install example (Debian/Ubuntu):
+```sh
+sudo apt-get install libgtk-4-1 libwebkitgtk-6.0-4 libjavascriptcoregtk-6.0-1
+```
 
 ## How to use
 
 #### Add dependency
 
 ```xml
-<!-- if targeting all platforms -->
 <dependency>
     <groupId>io.avaje.webview</groupId>
-    <artifactId>avaje-webview-all</artifactId>
-    <version>${version}</version>
-</dependency>
-
-<!-- or if just targeting a specific OS
-
-<dependency>
-    <groupId>io.avaje.webview</groupId>
-    <artifactId>avaje-webview-{windows|mac|linux64|linux32}</artifactId>
-    <version>${version}</version>
-</dependency>
--->
-
-<!-- or if just targeting a specific OS and architecture
-<dependency>
-    <groupId>io.avaje.webview</groupId>
-    <artifactId>avaje-webview-{windows-x86|windows-x86_64|you get the idea}</artifactId>
-    <version>${version}</version>
-</dependency>
--->
-```
-If using GraalVM native image and maven, we can use `avaje-webview-platform` as the 
-dependency which will use **_maven profiles_** to selectively include the platform 
-specific dependencies for Mac, Windows, Linux.
-
-```xml
-<!-- uses maven profiles to include platform specific dependencies -->
-<dependency>
-    <groupId>io.avaje.webview</groupId>
-    <artifactId>avaje-webview-platform</artifactId>
+    <artifactId>avaje-webview</artifactId>
     <version>${version}</version>
 </dependency>
 ```
+#### JVM flags
 
+On **macOS**, the first webview must be created on the OS main thread. Pass `-XstartOnFirstThread` to the JVM:
+
+```sh
+java -XstartOnFirstThread --enable-native-access=ALL-UNNAMED -jar myapp.jar
+```
 
 #### Build a Webview
 
 ```java
 Webview webview = Webview.builder()
-    // browser developer tools enabled    
     .enableDeveloperTools(true)
     .title("My App")
     .html("<h1>Hello World</h1>")
@@ -67,29 +57,18 @@ Webview webview = Webview.builder()
 webview.run();
 ```
 
-### macOS
-macOS requires that all UI code be executed from the first thread, you will need to launch Java with -XstartOnFirstThread.
-
-
-## Options
-
-### Extracting embedded libraries
+Or navigate to a URL:
 
 ```java
-// Extract native libs to working dir directory (default, cleaned on exit)
 Webview webview = Webview.builder()
+    .title("My App")
+    .navigate("https://avaje.io")
     .build();
 
-// Extract native libs to temp directory (also cleaned on exit)
-Webview webview = Webview.builder()
-    .extractToTemp(true)
-    .build();
-
-// Extract native libs to user home (persistent, faster subsequent startups)
-Webview webview = Webview.builder()
-    .extractToUserHome(true)
-    .build();
+webview.run();
 ```
+
+## Options
 
 ### Window Properties
 
@@ -105,14 +84,14 @@ Webview webview = Webview.builder()
 webview.setMinSize(600, 400);
 webview.setMaxSize(1920, 1080);
 
-// Or set a fixed size
+// Or lock to a fixed size
 webview.setFixedSize(800, 600);
 
 // Maximize or fullscreen
 webview.maximizeWindow();
 webview.fullscreen();
 
-//set Dark Mode
+// Dark mode
 webview.setDarkAppearance(true);
 ```
 
@@ -126,6 +105,9 @@ webview.setIcon(Path.of("icon.ico"));
 webview.setIcon(getClass().getResource("/icon.ico").toURI());
 ```
 
+> **Note:** GTK4 dropped support for arbitrary file-based window icons. On Linux, the app icon
+> is set via the `.desktop` file and icon theme. `setIcon` is a no-op on Linux.
+
 ## Java-JavaScript Bridge
 
 ### Executing JavaScript from Java
@@ -135,20 +117,20 @@ Webview webview = Webview.builder()
     .html("<html><body><h1 id='title'>Original</h1></body></html>")
     .build();
 
-// Execute JavaScript immediately
+// Execute JavaScript in the webview
 webview.eval("document.getElementById('title').textContent = 'Updated!';");
 
 webview.run();
 ```
 
-### Executing Java from JavaScript
+### Calling Java from JavaScript
 
-Expose Java functionality to JavaScript as async functions:
+Bind Java functions as async `window` globals that return Promises:
 
 ```java
 Webview webview = Webview.builder()
-     .title("Java Bridge Example")
-     .html("""
+    .title("Java Bridge Example")
+    .html("""
         <!DOCTYPE html>
         <html>
         <body>
@@ -156,29 +138,31 @@ Webview webview = Webview.builder()
            <div id="result"></div>
            <script>
                async function callJava() {
-                      try {
-                         // Calls Java method, returns Promise
-                         const result = await greet('World');
-                         document.getElementById('result').textContent = result;
-                      } catch (error) {
-                        console.error('Java error:', error);
-                      }
-                }
+                   try {
+                       const result = await greet('World');
+                       document.getElementById('result').textContent = result;
+                   } catch (error) {
+                       console.error('Java error:', error);
+                   }
+               }
            </script>
         </body>
         </html>
-       """)
-     .build();
-        
-// Bind Java method to JavaScript
+    """)
+    .build();
+
+// Bind Java method to JavaScript — args arrive as a JSON array string
 webview.bind("greet", (String jsonArgs) -> {
-       // do something with the args here
-      return "Recieved, " + jsonArgs + "!");
-   });
+    return "\"Hello, " + jsonArgs + "!\""; // return value must be valid JSON
+});
+
 webview.run();
 ```
 
-### Example Complex Data Exchange
+Binding callbacks receive arguments as a JSON array string and must return a valid JSON string.
+The JavaScript side receives the return value as the resolved Promise value.
+
+### Complex Data Exchange
 
 ```java
 record User(String name, int age) {}
@@ -188,10 +172,7 @@ Webview webview = Webview.builder()
     .html("""
         <script>
             async function getUser() {
-                const user = await fetchUser({
-                    action: 'get',
-                    userId: '123'
-                });
+                const user = await fetchUser({ action: 'get', userId: '123' });
                 console.log(user.name, user.age);
             }
         </script>
@@ -200,10 +181,7 @@ Webview webview = Webview.builder()
 
 webview.bind("fetchUser", (String jsonArgs) -> {
     UserRequest request = Jsonb.instance().type(UserRequest.class).list().fromJson(jsonArgs).getFirst();
-    
-    // Simulate database lookup
     User user = new User("Alice", 30);
-    
     return Jsonb.instance().toJson(user);
 });
 
@@ -211,18 +189,49 @@ webview.eval("getUser();");
 webview.run();
 ```
 
-## Notable changes (from upstream)
+## Multiple Windows
 
-- Add support for GraalVM native image
-- Use FFM instead of JNA
-- Full JPMS support
-- Add support for extracting the embedded libraries into temp or user home subdir
-- Builder pattern to replace constructors
-- More window functions (setting icons, maximizing and fullscreen)
-- Mac window functions
-- Linux window functions
-- Remove the dependency on co.casterlabs.commons:platform (local copy of necessary code only)
-- Remove the dependency on co.casterlabs.commons:io
-- Remove the dependency on Lombok and Jetbrains
-- Replace Lombok with code
-- Replace Lombok `@NonNull` and Jetbrains `@Nullable` with JSpecify annotations
+Multiple windows are supported on all platforms. Additional windows can be created from any
+thread once the first window's event loop is running.
+
+```java
+try (var w1 = Webview.create(false)) {
+    w1.bind("openSecond", _ -> {
+        Thread.ofPlatform().start(() -> {
+            try (var w2 = Webview.create(false)) {
+                w2.setHTML("<h1>Window 2</h1>");
+                w2.run();
+            }
+        });
+        return "null";
+    });
+    w1.setHTML("<button onclick='openSecond()'>Open second window</button>");
+    w1.run();
+}
+```
+
+**macOS constraint:** the first `Webview` must be created on the OS main thread
+(`-XstartOnFirstThread`). Additional windows may be created from background threads.
+
+**Linux constraint:** the first `Webview` must be created on the thread that will call `run()`.
+All subsequent windows dispatch their init to that thread automatically.
+
+## Console output
+
+`console.log`, `console.warn`, `console.error`, etc. are automatically forwarded to
+`java.lang.System.Logger` under the name `io.avaje.webview`. Configure your logging
+framework to see webview JS console output.
+
+## Notable changes from upstream
+
+- Use **FFM** instead of JNA, no embedded native libraries
+- Full **JPMS** support
+- Pure **Java 25** implementation
+- Support for **GraalVM native image**
+- Builder pattern replaces constructors
+- **Multi-window** support on macOS and Linux
+- Extended window API: `setIcon`, `maximizeWindow`, `fullscreen`, `setDarkAppearance`, `setFixedSize`, `setMinSize`, `setMaxSize`
+- Automatic **console redirection** (JS console -> Java logger)
+- Remove dependency on `co.casterlabs.commons:platform`
+- Remove dependency on `co.casterlabs.commons:io`
+- Remove Lombok and Jetbrains annotations; replaced with JSpecify (`@NonNull`, `@Nullable`)
